--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO12gSl83dLgpXTR021whca",
+      "authorship_tag": "ABX9TyNwrPt8CHtv9RLqy82xvmOg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "PdWLk9hqWXYm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import hashlib"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EJGvZnt9WqV4",
         "colab_type": "code",
         "colab": {}
       },
