--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOj3w7cs3B7tdQ7695jSu7N",
+      "authorship_tag": "ABX9TyNb8Cu9p0HtkcJPV61RjYke",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,7 +127,13 @@
         "    if self.head is None:\n",
         "      raise ValueError('Block chain is empty')\n",
         "    \n",
-        "    # Check \n",
+        "    data_hash = self.calc_hash(data)\n",
+        "\n",
+        "    # Check if hash exists at all or not\n",
+        "    try:\n",
+        "      return self.blocks[data_hash]\n",
+        "    except KeyError:\n",
+        "      raise ValueError('Block chain does not contain this data')\n",
         "\n",
         "  def remove(self, data):\n",
         "    pass\n",
