--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNb8Cu9p0HtkcJPV61RjYke",
+      "authorship_tag": "ABX9TyOvAorKuEX7Bb5uFziZPNmh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,20 +33,8 @@
       },
       "source": [
         "import hashlib\n",
-        "import datetime"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "N1ckfT3imRaO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+        "from time import gmtime, strftime\n",
+        "import time"
       ],
       "execution_count": 0,
       "outputs": []
@@ -60,7 +48,6 @@
       },
       "source": [
         "class Block:\n",
-        "\n",
         "    def __init__(self, timestamp, data, previous_hash, current_hash):\n",
         "      self.timestamp = timestamp\n",
         "      self.data = data\n",
@@ -92,7 +79,7 @@
         "  def prepend(self, data):\n",
         "    # Create a new block\n",
         "    data_hash = self.calc_hash(data)\n",
-        "    new_block = Block(datetime.datetime.now(), data, None, data_hash)\n",
+        "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
         "    self.blocks[data_hash] = new_block\n",
         "\n",
         "    if self.head is None:\n",
@@ -108,7 +95,7 @@
         "  def append(self, data):\n",
         "    # Create a new block\n",
         "    data_hash = self.calc_hash(data)\n",
-        "    new_block = Block(datetime.datetime.now(), data, None, data_hash)\n",
+        "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
         "    self.blocks[data_hash] = new_block\n",
         "\n",
         "    if self.head is None:\n",
@@ -123,18 +110,9 @@
         "\n",
         "\n",
         "  def search(self, data):\n",
-        "    # Check if LinkedList is empty\n",
-        "    if self.head is None:\n",
-        "      raise ValueError('Block chain is empty')\n",
+        "    # Blocks are stored in a dictionary object based on the hash, search within\n",
+        "    # STUCK HERE\n",
         "    \n",
-        "    data_hash = self.calc_hash(data)\n",
-        "\n",
-        "    # Check if hash exists at all or not\n",
-        "    try:\n",
-        "      return self.blocks[data_hash]\n",
-        "    except KeyError:\n",
-        "      raise ValueError('Block chain does not contain this data')\n",
-        "\n",
         "  def remove(self, data):\n",
         "    pass\n",
         "\n",
@@ -145,36 +123,7 @@
         "    pass\n",
         "\n",
         "  def size(self):\n",
-        "    pass\n",
-        "\n",
-        "  def add_block(self, data):\n",
-        "    # create a new block\n",
-        "    data_hash = self.calc_hash(data)\n",
-        "    new_block = Block(datetime.datetime.now(), data, None, data_hash)\n",
-        "\n",
-        "    if self.head is None:\n",
-        "      # assign head and tail to it\n",
-        "      self.head = new_block\n",
-        "    else:\n",
-        "      # assign tail hash to new block's prev hash\n",
-        "      new_block.previous_hash = self.tail.hash\n",
-        "\n",
-        "      # assign tail to new block\n",
-        "      self.blocks[data_hash] = new_block\n",
-        "      self.tail = new_block\n",
-        "  \n",
-        "  def get_block(data):\n",
-        "    # Generate a hash of the data\n",
-        "    data_hash = self.calc_hash(data)\n",
-        "    block = self.tail\n",
-        "    while block:\n",
-        "      if block.hash == data_hash:\n",
-        "        return block\n",
-        "      else:\n",
-        "        # Fetch the previous block's hash\n",
-        "        prev_block_hash = block.previous_hash\n",
-        "      \n",
-        "\n"
+        "    pass"
       ],
       "execution_count": 0,
       "outputs": []
