--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvAorKuEX7Bb5uFziZPNmh",
+      "authorship_tag": "ABX9TyM3z6gBcgg6GIPsqd2gUksg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
         "    # Create a new block\n",
         "    data_hash = self.calc_hash(data)\n",
         "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
-        "    self.blocks[data_hash] = new_block\n",
+        "    self.blocks.append(new_block)\n",
         "\n",
         "    if self.head is None:\n",
         "      # If no head, that would mean no tail, assign both to new block and return\n",
@@ -96,7 +96,7 @@
         "    # Create a new block\n",
         "    data_hash = self.calc_hash(data)\n",
         "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
-        "    self.blocks[data_hash] = new_block\n",
+        "    self.blocks.append(new_block)\n",
         "\n",
         "    if self.head is None:\n",
         "      # If no head, that would mean no tail, assign both to new block and return\n",
@@ -110,8 +110,9 @@
         "\n",
         "\n",
         "  def search(self, data):\n",
-        "    # Blocks are stored in a dictionary object based on the hash, search within\n",
-        "    # STUCK HERE\n",
+        "    # Traverse through the list and find based on data or hash\n",
+        "    # Or via head/tail\n",
+        "    # ?????\n",
         "    \n",
         "  def remove(self, data):\n",
         "    pass\n",
